<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <EditText
            android:id="@+id/edt_folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:autofillHints="name"
            android:background="@drawable/edt_background"
            android:digits="@string/digits_name"
            android:hint="@string/enter_sv_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/textcolor1"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edt_sv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/edt_background"
            android:gravity="start"
            android:hint="@string/enter_sv_address"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:maxLines="1"

            android:textColor="@color/textcolor1"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edt_sv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/edt_background"
            android:digits="@string/digits_phone"
            android:gravity="start"
            android:hint="@string/enter_sv_phone"

            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/textcolor1"

            android:textSize="@dimen/_16sdp"
            android:autofillHints="no" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/ic_plus_backround"
            android:text="@string/save"
            android:textAllCaps="false" />


    </LinearLayout>
</layout>
